# portfolio

./: .env.example  .gitignore  CNAME  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  build.sh  pyproject.toml  pyvenv.cfg  render-build.sh  requirements.txt  robots.txt
.github/workflows/: django.yml
backend/: render-build.sh  requirements.txt
backend/authentication/: views.py
backend/backend/: settings.py  urls.py
backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py
backend/contact/: forms.py  views.py
contacts/: forms.py  urls.py  views.py
contacts/static/: contacts.css
contacts/templates/: contacts.html
contributions/: urls.py  views.py
contributions/static/: contributions.css  contributions.js
contributions/templates/: contributions.html
frontend/: .prettierrc  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Footer.css  Footer.jsx  Header.css  Header.jsx
frontend/src/pages/: Admin.jsx  Blog.jsx  Contact.css  Contact.jsx  Contributions.css  Contributions.jsx  Home.css  Home.jsx  NotFound.jsx  Projects.css  Projects.jsx
frontend/src/styles/: Admin.css  (+6 more)
home/: views.py
home/static/: home.css  home.js
home/templates/: home.html
portfolio/: settings.py  urls.py
projects/: urls.py  views.py
projects/static/: projects.css  projects.js
projects/templates/: projects.html
static/: base.css  base.js
templates/: base.html
theme/: context_processors.py  urls.py  views.py
